Client fix - font was one weight too much.

--- a/sass/_stored.scss
+++ b/sass/_stored.scss
@@ -216,7 +216,7 @@
 						li {
 							a {
 								color: $white;
-								font-weight: 900;
+								font-weight: 700;
 							}
 						}
 					}
